# StellarCade

./: .gitignore
.githooks/: pre-commit  pre-push
.github/workflows/: lint.yml  test-contracts.yml
contracts/: Cargo.toml  README.md
contracts/achievement-badge/: Cargo.toml  README.md
contracts/coin-flip/: Cargo.toml
contracts/comprehensive-test-suite/: README.md
contracts/contract-address-registry/: README.md
contracts/contract-circuit-breaker/: README.md
contracts/contract-doc-generator/: Cargo.toml  README.md
contracts/contract-health-registry/: README.md
contracts/contract-interaction-library/: Cargo.toml  README.md
contracts/contract-metadata-registry/: README.md
contracts/contract-monitoring/: README.md
contracts/contract-role-registry/: Cargo.toml  README.md
contracts/contract-upgrade-timelock/: README.md
contracts/cross-chain-bridge/: README.md
contracts/cross-contract-call-guard/: README.md
contracts/daily-reward-emission/: README.md
contracts/dynamic-fee-policy/: README.md
contracts/epoch-scheduler/: README.md
contracts/escrow-vault/: README.md
contracts/gas-optimization-analysis/: README.md
contracts/governance/: Cargo.toml
contracts/governance-token/: README.md
contracts/governance/src/: lib.rs  test.rs  test_custom_token.rs
contracts/matchmaking-queue/: README.md
contracts/nft-reward/: README.md
contracts/penalty-slashing/: README.md
contracts/prize-pool/: Cargo.toml
contracts/prize-pool/src/: lib.rs
contracts/revenue-split/: README.md
frontend/: .eslintrc.cjs  package.json  tsconfig.json
(+187 files in other folders)
