[package]
name = "stellarcade-governance"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "25.0.2"

[dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }
stellarcade-governance-token = { path = "../governance-token" }

[lib]
crate-type = ["cdylib", "rlib"]
